tests/baselines/reference/typeGuardConstructorNarrowPrimitivesInUnion.errors.txt
typeGuardConstructorNarrowPrimitivesInUnion.ts(4,5): error TS2454: Variable 'var1' is used before being assigned.
typeGuardConstructorNarrowPrimitivesInUnion.ts(8,5): error TS2454: Variable 'var1' is used before being assigned.
typeGuardConstructorNarrowPrimitivesInUnion.ts(12,5): error TS2454: Variable 'var1' is used before being assigned.
typeGuardConstructorNarrowPrimitivesInUnion.ts(16,5): error TS2454: Variable 'var1' is used before being assigned.


==== typeGuardConstructorNarrowPrimitivesInUnion.ts (4 errors) ====
    // Union of primitives, number, arrays, and C1
    let var1: number | "hello" | "world" | true | false | number[] | string[];
    
    if (var1.constructor === Number) {
        ~~~~
!!! error TS2454: Variable 'var1' is used before being assigned.
        var1; // number
    }
    
    if (var1.constructor === String) {
        ~~~~
!!! error TS2454: Variable 'var1' is used before being assigned.
        var1; // "hello" | "world"
    }
    
    if (var1.constructor === Boolean) {
        ~~~~
!!! error TS2454: Variable 'var1' is used before being assigned.
        var1; // boolean
    }
    
    if (var1.constructor === Array) {
        ~~~~
!!! error TS2454: Variable 'var1' is used before being assigned.
        var1; // number[] | string[]
    }
    